Move bold property from html to css property

--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
             #n {
                 font-size: 5rem;
                 color:white;
+                font-weight: bold;
             }
         </style>
     </head>
     <body>
         <div id="outer">
             <div id="inner">
-                <span id="n"><b>N</b></span>
+                <span id="n">N</span>
             </div>
         </div>
     </body>
