--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             }
 
             #n {
+                font-family: "Times New Roman", serif;
                 font-size: 5rem;
                 color:white;
                 font-weight: bold;
