--- a/index.html
+++ b/index.html
@@ -13,25 +13,15 @@
                 min-height: 100vh;
             }
 
-            #outer {
-                background: rgb(0, 96, 170);
-                border-radius: 50%;
-                width: 6.5rem;
-                height: 6.5rem;
-                text-align: center;
-                padding: 1rem;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-            }
-
-            #inner {
+            #circles {
                 background-color: rgb(104, 186, 230);
                 border-radius:50%;
                 width:6rem;
                 height:6rem;
                 text-align: center;
                 border: 0.1rem solid white;
+                box-shadow: 0px 0px 0px 1rem rgb(0, 96, 170);
+                 
             }
 
             #n {
@@ -43,10 +33,8 @@
         </style>
     </head>
     <body>
-        <div id="outer">
-            <div id="inner">
-                <span id="n">N</span>
-            </div>
+        <div id="circles">
+            <span id="n">N</span>
         </div>
     </body>
 </html>
