--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
         <style>
             html {
                 font-size: calc(14px + 7vmin);
+                margin: 0;
+                padding: 0;
+                height:100%;
             }
             
             body {
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                min-height: 100vh;
+                height: 100%;
             }
 
             #circles {
@@ -18,10 +21,12 @@
                 border-radius:50%;
                 width:6rem;
                 height:6rem;
-                text-align: center;
                 border: 0.1rem solid white;
-                box-shadow: 0px 0px 0px 1rem rgb(0, 96, 170);
-                 
+                box-shadow: 0px 0px 0px 1rem rgb(0, 96, 170);   
+
+                display: flex;
+                align-items: center;
+                justify-content: center; 
             }
 
             #n {
