fixed body height

--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
 
 <head>
     <style>
-        html {
-            font-size: calc(14px + 7vmin);
+        html,
+        body {
             margin: 0;
             padding: 0;
             height: 100%;
+            background: whitesmoke;
+        }
+
+        html {
+            font-size: calc(14px + 7vmin);
         }
 
         body {
             display: flex;
             align-items: center;
             justify-content: center;
-            height: 100%;
         }
 
         #circles {
